Added a sweet ending

--- a/AnalyzeMTB.ipynb
+++ b/AnalyzeMTB.ipynb
@@ -351,6 +351,13 @@
     "ax.set_xticklabels([x.strftime(\"%Y-%m-%d\") for x in week_jump_df.tail(30).index], rotation=45)\n",
     "plt.show()"
    ]
+  },
+  {
+   "source": [
+    "### Hope you enjoyed my work!"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
